@startuml

class Participant {
nom
prenom
dateNaissance
..
email
photo
..
nomProfil
}

class Categorie {
nom
..
}

class Profil {
nom
..
}

class Passage {
lieuEpreuve
dateEpreuve
nomParticipant
prenomParticipant
dateNaissanceParticipant
numeroDePassage
..
nomCategorie
temps
}

class Epreuve {
lieu
date
..
}

Categorie "1" o-- "0-n" Passage : is made under <
Profil "1" o-- "0-n" Participant : is the profile of >
Epreuve "1" *-- "0-n" Passage : belongs to <
Participant "1" *-- "0-n" Passage : has made >

@enduml